Fixed minor things and added skeleton files

--- a/finished.html
+++ b/finished.html
@@ -9,6 +9,6 @@
 		<audio preload="true" id="collide">
 			<source src="sounds/pingpong.mp3" />
 		</audio>
-		<script src="skeleton-ping-pong.js"></script>
+		<script src="pong.js"></script>
 	</body>
 </html>
